2009-01-24  Raul Mateos  <raulofpandora@gmail.com>

	* install.php: Added code to show current console URL in step 3. 
	Updated header. Spaces changed to tabs.
	
	* include/functions_reporting.php: Give default value to several vars that
	caused two notice errors. Updated header.
	
	* include/functions_db.php: Solved notice error in search page that caused
	not to show the user. It uses get_users() function from mysql.php. 
	ldap.php and dev.php define the same function, and uses different value, so
	they could give an error in the search page, NOT TESTED. Updated header.
	
	* /extensions/update_manager/sql/update_manager.sql: Changed default text
	value for description column, it was giving a SQL error.

2009-01-23  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/map_builder.php: Fixed an error when getting
	layout data on AJAX and any module was selected for the node.

2009-01-22  Sancho Lerena <slerena@artica.es>

	* images/*: Added more icons and backgrouns for visual console.
	
	* map_builder.php: Added support for warning image. Shows in preview. Fixed
	grabbing image info if no file provided.
	 
	* functions_visualmap.php, functions_db.php: Added support for warning status
	in the maps. Also fixed status propagation from linked maps on agent object.
	
	* include/auth/mysql.php: Fixed typo when update password.
	
	* pandoradb_migrate_20_to_21.php: Added some missing lines for tusuario 
	table (comments).
	
2009-01-22  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* include/auth/ldap.php: Finally fixed (hopefully) the last major bug
	
	* godmode/extensions.php: Fixed something that prevented links from 
	generating
	
	* extensions/update_manager/lib/libupdate_manager.php: Fixed proxy not
	being filled in and giving error messages. Now the thing works.

2009-01-22  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* include/auth/mysql.php, include/auth/ldap.php, 
	operation/users/user_edit.php, godmode/users/configure_user.php, 