@@ -1,3 +1,14 @@
+2009-01-26  Esteban Sanchez  <estebans@artica.es>
+
+	* include/functions_ui.php: print_alert_template_example() now
+	replaces also the value.
+
+	* godmode/alerts/configure_alert_template.php: Removed first render
+	example using javascript.
+
+	* godmode/alerts/alert_templates.php: Removed parameter replacement
+	since it's now done in the function.
+
 2009-01-24  Raul Mateos  <raulofpandora@gmail.com>
 
 	* install.php: Added code to show current console URL in step 3. 
